fix intro pages on small screens

--- a/eT/eT.css
+++ b/eT/eT.css
@@ -242,20 +242,17 @@ h4.subsubsection_ {
 /* Responsive layout - when the screen is less than 900px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 900px) {
 	.container {	display: flex;	background-color: #ddd; padding: 0px; margin: 0px; flex-direction: column; }
-	.left-card { background-color: white; width: 100%; padding: 0px; margin: 0px; }
+	.left-card { background-color: white; width: 100%; padding: 5px; margin: 0px; }
+	figure { display: inline-block; font-size: 1.3em; background-color: white; width: 95%; padding: 20px; margin: 10px; vertical-align: top; }
+	figure img {width: 100%;}
 	.stripimg { width: 98%; }
 	nav a { float: none; width: 100%; }
 	article img { width: 90%; margin:0.25em; }
 	article { font-size: 18px; }
+	footer { font-size: 18px; }
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
 	article { font-size: 12px; }
-	}
-
-@media print {
-	nav * {
-		display: none !important;
-	}
 	}
